fix: alguns bugs ai
