# routes/web.php
@@ -16,3 +16,5 @@ use Illuminate\Support\Facades\Route;
 Route::post('/users', [UserController::class, 'store']);
 Route::get('/users', [UserController::class, 'index']);
 Route::get('/inserir', [UserController::class, 'salvar']);
+Route::get('/buscar', [UserController::class, 'buscar']);
+Route::get('/find', [UserController::class, 'getUser']);
